--- a/tasks/src/main/resources/templates/projects.html
+++ b/tasks/src/main/resources/templates/projects.html
@@ -22,10 +22,18 @@
 					<input type="text" th:field="*{steps[__${stepStat.index}__].description}"/>
 				</label>
 				<label>Dni do końca
-					<input type="text" th:field="*{steps[__${stepStat.index}__].daysToDeadline}"/>
+					<input type="number" th:field="*{steps[__${stepStat.index}__].daysToDeadline}"/>
 				</label>
 			</fieldset>
+			<div th:align="center">
+				<label>Dodaj krok</label>
+				<button type="submit" name="addStep">+</button>
+			</div>
 		</fieldset>
+		<p th:align="center">
+			<button type="submit">Dodaj</button>
+			<button type="reset">Wyczyść</button>
+		</p>
 	</form>
 
 </main>
