--- a/tasks/src/main/resources/templates/projects.html
+++ b/tasks/src/main/resources/templates/projects.html
@@ -1,33 +1,43 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="pl">
+<html lang="pl" xmlns:th="http://www.thymeleaf.org">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta content="width=device-width, initial-scale=1.0" name="viewport">
 	<title>Todo App: Project</title>
-	<link rel="stylesheet" href="https://igoradamenko.github.io/awsm.css/css/awsm_theme_black.min.css">
+	<link href="https://igoradamenko.github.io/awsm.css/css/awsm_theme_black.min.css" rel="stylesheet">
 </head>
 <body>
 <h1 th:align="center">Task-app TODO with UDEMY</h1>
 <main>
+	<h2 th:align="center" th:if="${message != null}" th:text="${message}"></h2>
+	<!--/*@thymesVar id="projects" type="java.util.List<com.responsywnie.tasks.model.Project>"*/-->
+	<dl th:each="project : ${projects}">
+		<dt th:text="${project.description}">....</dt>
+		<dd>
+			<ul>
+				<li th:each="step : ${project.steps}" th:text="|${step.description} (${step.daysToDeadline} dni)|"></li>
+			</ul>
+		</dd>
+	</dl>
 	<!--/*@thymesVar id="project" type="com.responsywnie.tasks.model.projection.ProjectWriteModel"*/-->
 	<form action="#" method="post" th:action="@{/projects}" th:object="${project}">
 		<fieldset>
 			<legend>Nowy projekt</legend>
 			<label>Opis
-				<input type="text" th:field="*{description}"/>
+				<input th:field="*{description}" type="text"/>
 			</label>
 			<fieldset th:each="step,stepStat : *{steps}">
 				<legend th:text="|Krok ${stepStat.index + 1}|"></legend>
 				<label>Opis
-					<input type="text" th:field="*{steps[__${stepStat.index}__].description}"/>
+					<input th:field="*{steps[__${stepStat.index}__].description}" type="text"/>
 				</label>
 				<label>Dni do końca
-					<input type="number" th:field="*{steps[__${stepStat.index}__].daysToDeadline}"/>
+					<input th:field="*{steps[__${stepStat.index}__].daysToDeadline}" type="number"/>
 				</label>
 			</fieldset>
 			<div th:align="center">
 				<label>Dodaj krok</label>
-				<button type="submit" name="addStep">+</button>
+				<button name="addStep" type="submit">+</button>
 			</div>
 		</fieldset>
 		<p th:align="center">
