--- a/tasks/src/main/resources/templates/projects.html
+++ b/tasks/src/main/resources/templates/projects.html
@@ -5,13 +5,18 @@
 	<meta content="width=device-width, initial-scale=1.0" name="viewport">
 	<title>Todo App: Project</title>
 	<link href="https://igoradamenko.github.io/awsm.css/css/awsm_theme_black.min.css" rel="stylesheet">
+	<style>
+		.Bd {
+			border: solid 1px white;
+		}
+	</style>
 </head>
 <body>
 <h1 th:align="center">Task-app TODO with UDEMY</h1>
 <main>
 	<h2 th:align="center" th:if="${message != null}" th:text="${message}"></h2>
 	<!--/*@thymesVar id="projects" type="java.util.List<com.responsywnie.tasks.model.Project>"*/-->
-	<dl th:each="project : ${projects}">
+	<dl th:each="project : ${projects}"class="Bd">
 		<dt th:text="${project.description}">....</dt>
 		<dd>
 			<ul>
