--- a/tasks/src/main/resources/templates/projects.html
+++ b/tasks/src/main/resources/templates/projects.html
@@ -6,9 +6,13 @@
 	<title>Todo App: Project</title>
 	<link href="https://igoradamenko.github.io/awsm.css/css/awsm_theme_black.min.css" rel="stylesheet">
 	<style>
-		.Bd {
-			border: solid 1px white;
-		}
+        .Bd {
+            border: solid 1px white;
+        }
+
+        .Bdc\(red\) {
+            border-color: red !important;
+        }
 	</style>
 </head>
 <body>
@@ -16,7 +20,7 @@
 <main>
 	<h2 th:align="center" th:if="${message != null}" th:text="${message}"></h2>
 	<!--/*@thymesVar id="projects" type="java.util.List<com.responsywnie.tasks.model.Project>"*/-->
-	<dl th:each="project : ${projects}"class="Bd">
+	<dl class="Bd" th:each="project : ${projects}">
 		<dt th:text="${project.description}">....</dt>
 		<dd>
 			<ul>
@@ -26,18 +30,21 @@
 	</dl>
 	<!--/*@thymesVar id="project" type="com.responsywnie.tasks.model.projection.ProjectWriteModel"*/-->
 	<form action="#" method="post" th:action="@{/projects}" th:object="${project}">
+		<p th:if="${#fields.hasAnyErrors()}"></p>
 		<fieldset>
 			<legend>Nowy projekt</legend>
 			<label>Opis
-				<input th:field="*{description}" type="text"/>
+				<input th:errorclass="'.Bdc(red)'" th:field="*{description}" type="text"/>
 			</label>
 			<fieldset th:each="step,stepStat : *{steps}">
 				<legend th:text="|Krok ${stepStat.index + 1}|"></legend>
 				<label>Opis
-					<input th:field="*{steps[__${stepStat.index}__].description}" type="text"/>
+					<input th:errorclass="'.Bdc(red)'" th:field="*{steps[__${stepStat.index}__].description}"
+						   type="text"/>
 				</label>
 				<label>Dni do końca
-					<input th:field="*{steps[__${stepStat.index}__].daysToDeadline}" type="number"/>
+					<input th:errorclass="'.Bdc(red)'" th:field="*{steps[__${stepStat.index}__].daysToDeadline}"
+						   type="number"/>
 				</label>
 			</fieldset>
 			<div th:align="center">
