--- a/tasks/src/main/resources/templates/projects.html
+++ b/tasks/src/main/resources/templates/projects.html
@@ -26,11 +26,17 @@
 			<ul>
 				<li th:each="step : ${project.steps}" th:text="|${step.description} (${step.daysToDeadline} dni)|"></li>
 			</ul>
+			<form action="#" method="post" th:action="@{/projects/{projectId}(projectId=${project.id})}">
+				<label>Deadline
+					<input name="deadline" type="datetime-local" pattern="[0-9]{4}-[0-9]{2}-[0-9]{2}T[0-9]{2}:[0-9]{2}">
+				</label>
+				<button type="submit">Utwórz taski >> </button>
+			</form>
 		</dd>
 	</dl>
 	<!--/*@thymesVar id="project" type="com.responsywnie.tasks.model.projection.ProjectWriteModel"*/-->
 	<form action="#" method="post" th:action="@{/projects}" th:object="${project}">
-		<p th:if="${#fields.hasAnyErrors()}"></p>
+		<p th:if="${#fields.hasAnyErrors()}" th:errors="*{all}"></p>
 		<fieldset>
 			<legend>Nowy projekt</legend>
 			<label>Opis
@@ -39,11 +45,11 @@
 			<fieldset th:each="step,stepStat : *{steps}">
 				<legend th:text="|Krok ${stepStat.index + 1}|"></legend>
 				<label>Opis
-					<input th:errorclass="'.Bdc(red)'" th:field="*{steps[__${stepStat.index}__].description}"
+					<input th:field="*{steps[__${stepStat.index}__].description}"
 						   type="text"/>
 				</label>
 				<label>Dni do końca
-					<input th:errorclass="'.Bdc(red)'" th:field="*{steps[__${stepStat.index}__].daysToDeadline}"
+					<input th:field="*{steps[__${stepStat.index}__].daysToDeadline}"
 						   type="number"/>
 				</label>
 			</fieldset>
@@ -57,7 +63,6 @@
 			<button type="reset">Wyczyść</button>
 		</p>
 	</form>
-
 </main>
 </body>
 </html>
